# laba7

./: gtest
assert/: CMakelists.txt  main.cpp  task1.cpp  tests.cpp
ctest/: CMakeLists.txt  main.cpp  task2.cpp  task2.h  test1.cpp  test2.cpp  test3.cpp
gtest/gtests_test/: CMakeLists.txt
gtest/tasks/: task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h
